fix toasts overlapping

--- a/src/app/components/achievement-toast/achievement-toast.component.scss
+++ b/src/app/components/achievement-toast/achievement-toast.component.scss
@@ -1,6 +1,6 @@
 .achievement-toast {
     position: fixed;
-    bottom: 20px;
+    bottom: calc(20px + var(--ion-safe-area-bottom));
     left: 50%;
     right: -10%;
     transform: translateX(-50%);
